  fork (and it will be included in the future POSIX standard).  The new _Fork
  function does not run any atfork function neither resets any internal state
  or lock (such as the malloc one), and only sets up a minimal state required
  to call async-signal-safe functions (such as raise or execve).  This function
  is currently a GNU extension.

Deprecated and removed features, and other changes affecting compatibility:

* The function pthread_mutex_consistent_np has been deprecated; programs
  should use the equivalent standard function pthread_mutex_consistent
  instead.

* The function pthread_mutexattr_getrobust_np has been deprecated;
  programs should use the equivalent standard function
  pthread_mutexattr_getrobust instead.

* The function pthread_mutexattr_setrobust_np has been deprecated;
  programs should use the equivalent standard function
  pthread_mutexattr_setrobust instead.

* The function pthread_yield has been deprecated; programs should use
  the equivalent standard function sched_yield instead.

* The pthread cancellation handler is now installed with SA_RESTART and
  pthread_cancel will always send the internal SIGCANCEL on a cancellation
  request.  It should not be visible to application since the cancellation
  handler should either act upon cancellation (if asynchronous cancellation
  is enabled) or ignore the cancellation internal signal.  However there are
  buggy kernel interfaces (for instance some CIFS version) that could still
  see spurious EINTR error when cancellation interrupts a blocking syscall.

* Previously, glibc installed its various shared objects under versioned
  file names such as libc-2.33.so.  The ABI sonames (e.g., libc.so.6)
  were provided as symbolic links.  Starting with glibc 2.34, the shared
  objects are installed under their ABI sonames directly, without
  symbolic links.  This increases compatibility with distribution
  package managers that delete removed files late during the package